Fix navbar links being wrong color when hovered, put background on about page

--- a/css/about.css
+++ b/css/about.css
@@ -17,6 +17,7 @@ ul li a {
 
 ul li a:hover:not(.active) {
     background-color: #d1e2f3;
+    color: #0c2232; /* keeps navbar text dark instead of changing to the global hover color */
 }
 
 ul li a.active {
@@ -26,4 +27,11 @@ ul li a.active {
 
 h1, h2, h3, h4, h5, h6, p {
     font-family: Arial;
+}
+
+.masterBg {
+    background-image: url("../assets/cloud-bg.jpg"); /* This path must be in relation to the CSS file NOT the HTML file! */
+    background-position: center;
+    background-size: cover;
+    height: 50em;
 }
